# idr

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
idr/: __init__.py  idr.py  inv_cdf.c  inv_cdf.pyx
tests/: test_idr.py  test_inv_cdf.py
