[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "numpy", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "idrix"
version = "2.1.1"
description = "IDR is a method for measuring the reproducibility of replicated ChIP-seq type experiments and providing a stable measure of the reproducibility of identified peaks."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = ["Nathan Boley <npboley@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
]
packages = [{include = "idr"}]
scripts = {idr = "idr:main"}

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.9"
numpy = "*"
cython = "*"
matplotlib = "*"
scipy = ">=0.13.0"

[tool.poetry.urls]
Homepage = "https://github.com/sequana/idr"

[tool.pytest.ini_options]
addopts = "--verbose --cov idr"
